# HW4

./: .gitignore  CMakeLists.txt  output_ix.txt
wci/backend/interpreter/executors/: ExpressionExecutor.cpp
wci/frontend/pascal/parsers/: ExpressionParser.cpp
