cmake_minimum_required(VERSION 3.8)
project(Pascal)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES Pascal.cpp Pascal.h
        Pascal.cpp
    wci/backend/Backend.cpp
    wci/backend/BackendFactory.cpp
    wci/backend/compiler/CodeGenerator.cpp
    wci/backend/interpreter/Executor.cpp
    wci/backend/interpreter/MemoryFactory.cpp
    wci/backend/interpreter/RuntimeError.cpp
    wci/backend/interpreter/RuntimeErrorHandler.cpp
    wci/backend/interpreter/executors/AssignmentExecutor.cpp
    wci/backend/interpreter/executors/CallDeclaredExecutor.cpp
    wci/backend/interpreter/executors/CallExecutor.cpp
    wci/backend/interpreter/executors/CallStandardExecutor.cpp
    wci/backend/interpreter/executors/CompoundExecutor.cpp
    wci/backend/interpreter/executors/ExpressionExecutor.cpp
    wci/backend/interpreter/executors/IfExecutor.cpp
    wci/backend/interpreter/executors/LoopExecutor.cpp
    wci/backend/interpreter/executors/SelectExecutor.cpp
    wci/backend/interpreter/executors/StatementExecutor.cpp
    wci/backend/interpreter/memoryimpl/ActivationRecordImpl.cpp
    wci/backend/interpreter/memoryimpl/CellImpl.cpp
    wci/backend/interpreter/memoryimpl/MemoryMapImpl.cpp
    wci/backend/interpreter/memoryimpl/RuntimeDisplayImpl.cpp
    wci/backend/interpreter/memoryimpl/RuntimeStackImpl.cpp
    wci/frontend/FrontendFactory.cpp
    wci/frontend/Parser.cpp
    wci/frontend/Scanner.cpp
    wci/frontend/Source.cpp
    wci/frontend/Token.cpp
    wci/frontend/pascal/PascalError.cpp
    wci/frontend/pascal/PascalErrorHandler.cpp
    wci/frontend/pascal/PascalParserTD.cpp
    wci/frontend/pascal/PascalScanner.cpp
    wci/frontend/pascal/PascalToken.cpp
    wci/frontend/pascal/parsers/ArrayTypeParser.cpp
    wci/frontend/pascal/parsers/AssignmentStatementParser.cpp
    wci/frontend/pascal/parsers/BlockParser.cpp
    wci/frontend/pascal/parsers/CallDeclaredParser.cpp
    wci/frontend/pascal/parsers/CallParser.cpp
    wci/frontend/pascal/parsers/CallStandardParser.cpp
    wci/frontend/pascal/parsers/CaseStatementParser.cpp
    wci/frontend/pascal/parsers/CompoundStatementParser.cpp
    wci/frontend/pascal/parsers/ConstantDefinitionsParser.cpp
    wci/frontend/pascal/parsers/DeclarationsParser.cpp
    wci/frontend/pascal/parsers/DeclaredRoutineParser.cpp
    wci/frontend/pascal/parsers/EnumerationTypeParser.cpp
    wci/frontend/pascal/parsers/ExpressionParser.cpp
    wci/frontend/pascal/parsers/ForStatementParser.cpp
    wci/frontend/pascal/parsers/IfStatementParser.cpp
    wci/frontend/pascal/parsers/ProgramParser.cpp
    wci/frontend/pascal/parsers/RecordTypeParser.cpp
    wci/frontend/pascal/parsers/RepeatStatementParser.cpp
    wci/frontend/pascal/parsers/SimpleTypeParser.cpp
    wci/frontend/pascal/parsers/StatementParser.cpp
    wci/frontend/pascal/parsers/SubrangeTypeParser.cpp
    wci/frontend/pascal/parsers/TypeDefinitionsParser.cpp
    wci/frontend/pascal/parsers/TypeSpecificationParser.cpp
    wci/frontend/pascal/parsers/VariableDeclarationsParser.cpp
    wci/frontend/pascal/parsers/VariableParser.cpp
    wci/frontend/pascal/parsers/WhileStatementParser.cpp
    wci/frontend/pascal/tokens/PascalErrorToken.cpp
    wci/frontend/pascal/tokens/PascalNumberToken.cpp
    wci/frontend/pascal/tokens/PascalSpecialSymbolToken.cpp
    wci/frontend/pascal/tokens/PascalStringToken.cpp
    wci/frontend/pascal/tokens/PascalWordToken.cpp
    wci/intermediate/ICodeFactory.cpp
    wci/intermediate/SymTabFactory.cpp
    wci/intermediate/TypeFactory.cpp
    wci/intermediate/icodeimpl/ICodeImpl.cpp
    wci/intermediate/icodeimpl/ICodeNodeImpl.cpp
    wci/intermediate/symtabimpl/Predefined.cpp
    wci/intermediate/symtabimpl/SymTabEntryImpl.cpp
    wci/intermediate/symtabimpl/SymTabImpl.cpp
    wci/intermediate/symtabimpl/SymTabStackImpl.cpp
    wci/intermediate/typeimpl/TypeChecker.cpp
    wci/intermediate/typeimpl/TypeSpecImpl.cpp
    wci/message/Message.cpp
    wci/message/MessageHandler.cpp
    wci/util/CrossReferencer.cpp
    wci/util/ParseTreePrinter.cpp


    wci/backend/Backend.h
    wci/backend/BackendFactory.h
    wci/backend/compiler/CodeGenerator.h
    wci/backend/interpreter/Executor.h
    wci/backend/interpreter/MemoryFactory.h
    wci/backend/interpreter/RuntimeError.h
    wci/backend/interpreter/RuntimeErrorHandler.h
    wci/backend/interpreter/executors/AssignmentExecutor.h
    wci/backend/interpreter/executors/CallDeclaredExecutor.h
    wci/backend/interpreter/executors/CallExecutor.h
    wci/backend/interpreter/executors/CallStandardExecutor.h
    wci/backend/interpreter/executors/CompoundExecutor.h
    wci/backend/interpreter/executors/ExpressionExecutor.h
    wci/backend/interpreter/executors/IfExecutor.h
    wci/backend/interpreter/executors/LoopExecutor.h
    wci/backend/interpreter/executors/SelectExecutor.h
    wci/backend/interpreter/executors/StatementExecutor.h
    wci/backend/interpreter/memoryimpl/ActivationRecordImpl.h
    wci/backend/interpreter/memoryimpl/CellImpl.h
    wci/backend/interpreter/memoryimpl/MemoryMapImpl.h
    wci/backend/interpreter/memoryimpl/RuntimeDisplayImpl.h
    wci/backend/interpreter/memoryimpl/RuntimeStackImpl.h
    wci/frontend/FrontendFactory.h
    wci/frontend/Parser.h
    wci/frontend/Scanner.h
    wci/frontend/Source.h
    wci/frontend/Token.h
    wci/frontend/pascal/PascalError.h
    wci/frontend/pascal/PascalErrorHandler.h
    wci/frontend/pascal/PascalParserTD.h
    wci/frontend/pascal/PascalScanner.h
    wci/frontend/pascal/PascalToken.h
    wci/frontend/pascal/parsers/ArrayTypeParser.h
    wci/frontend/pascal/parsers/AssignmentStatementParser.h
    wci/frontend/pascal/parsers/BlockParser.h
    wci/frontend/pascal/parsers/CallDeclaredParser.h
    wci/frontend/pascal/parsers/CallParser.h
    wci/frontend/pascal/parsers/CallStandardParser.h
    wci/frontend/pascal/parsers/CaseStatementParser.h
    wci/frontend/pascal/parsers/CompoundStatementParser.h
    wci/frontend/pascal/parsers/ConstantDefinitionsParser.h
    wci/frontend/pascal/parsers/DeclarationsParser.h
    wci/frontend/pascal/parsers/DeclaredRoutineParser.h
    wci/frontend/pascal/parsers/EnumerationTypeParser.h
    wci/frontend/pascal/parsers/ExpressionParser.h
    wci/frontend/pascal/parsers/ForStatementParser.h
    wci/frontend/pascal/parsers/IfStatementParser.h
    wci/frontend/pascal/parsers/ProgramParser.h
    wci/frontend/pascal/parsers/RecordTypeParser.h
    wci/frontend/pascal/parsers/RepeatStatementParser.h
    wci/frontend/pascal/parsers/SimpleTypeParser.h
    wci/frontend/pascal/parsers/StatementParser.h
    wci/frontend/pascal/parsers/SubrangeTypeParser.h
    wci/frontend/pascal/parsers/TypeDefinitionsParser.h
    wci/frontend/pascal/parsers/TypeSpecificationParser.h
    wci/frontend/pascal/parsers/VariableDeclarationsParser.h
    wci/frontend/pascal/parsers/VariableParser.h
    wci/frontend/pascal/parsers/WhileStatementParser.h
    wci/frontend/pascal/tokens/PascalErrorToken.h
    wci/frontend/pascal/tokens/PascalNumberToken.h
    wci/frontend/pascal/tokens/PascalSpecialSymbolToken.h
    wci/frontend/pascal/tokens/PascalStringToken.h
    wci/frontend/pascal/tokens/PascalWordToken.h
    wci/intermediate/ICodeFactory.h
    wci/intermediate/SymTabFactory.h
    wci/intermediate/TypeFactory.h
    wci/intermediate/icodeimpl/ICodeImpl.h
    wci/intermediate/icodeimpl/ICodeNodeImpl.h
    wci/intermediate/symtabimpl/Predefined.h
    wci/intermediate/symtabimpl/SymTabEntryImpl.h
    wci/intermediate/symtabimpl/SymTabImpl.h
    wci/intermediate/symtabimpl/SymTabStackImpl.h
    wci/intermediate/typeimpl/TypeChecker.h
    wci/intermediate/typeimpl/TypeSpecImpl.h
    wci/message/Message.h
    wci/message/MessageHandler.h
    wci/util/CrossReferencer.h
    wci/util/ParseTreePrinter.h

        wci/backend/compiler/MemoryMap.h
        wci/backend/interpreter/ActivationRecord.h
        wci/backend/interpreter/Cell.h
        wci/backend/interpreter/MemoryMap.h
        wci/backend/interpreter/RuntimeDisplay.h
        wci/backend/interpreter/RuntimeStack.h

        wci/intermediate/ICode.h
        wci/intermediate/ICodeNode.h
        wci/intermediate/SymTab.h
        wci/intermediate/SymTabEntry.h
        wci/intermediate/SymTabStack.h
        wci/intermediate/TypeSpec.h

        wci/message/MessageListener.h
        wci/message/MessageProducer.h
        )
add_executable(Pascal ${SOURCE_FILES})
